<resources>
    <string name="app_name">WeatherForecast Demo</string>

    <string name="today_weather_txt">Today Temperature (Celcius)</string>
    <string name="tomorrow_weather_txt">Tomorrow Temperature (Celcius)</string>
    <string name="celcius_txt">%s \u00B0</string>
    <string name="switch_week_btn">See next 7 days</string>
    <string name="switch_day_btn">See current day</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="title_activity_week_forecast">Weekly Forecast</string>
    <string name="your_current_loc_txt">Your current city:</string>
    <string name="input_address_txt">Input address for weather forecast</string>
    <string name="setup_city_txt">Setup custom address</string>
    <string name="reset_location_txt">Reset your location</string>

    <string name="location_error_message">Something Wrong With location service, please check your location status on your device.\nWe will get the sample location at this time.</string>
    <string name="empty_error_message">Please input your address!</string>
    <string name="no_location_error_message">Cannot find this location!</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_setting">Setting</string>
</resources>
