<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="demo.weather.app.com.weatherforecastdemo.activities.SettingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_current_loc_txt" />

    <TextView
        android:id="@+id/current_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/input_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_address_txt"/>

    <Button
        android:id="@+id/setup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_city_txt"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_location_txt"/>

</LinearLayout>
